[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chandra"
version = "0.1.0"
description = "Fast, lightweight text embeddings and semantic search"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["embeddings", "nlp", "semantic-search", "text", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: ndependencies = [
    "numpy1.240",
    "token.0",
    "20.0",
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0",
    "ruff>=0.1.0",
]
gpu = [
    "onnxruntime-gpu>=1.16.0",
]

[project.urls]
Homepage = "https://github.com/datalab-to/chandra"
Repository = "https://github.com/datalab-to/chandra"
Issues = "https://github.com/datalab-to/chandra/issues"

[tool.hatch.build.targets.wheel]
packages = ["chandra"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=chandra --cov-report=term-missing"

[tool.coverage.run]
source = ["chandra"]
omit = ["tests/*"]
